...
            android:shadowDy="0.0"
            android:shadowRadius="0.5"
            android:textStyle="italic"
            />

        <EditText
            android:id="@+id/emailEntry"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_input_box"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
...
            android:hint="@string/email_prompt"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/passwordEntry"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_input_box"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
...
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:autofillHints="password"
            android:layout_marginTop="2dp"/>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/positive_selection"
            android:text="@string/sign_in"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/accountCreationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:text="@string/account_creation_textview"
            android:textColor="@color/black"
...
