<resources>
    <string name="app_name">Asset Armor</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="asset_armor">ASSET ARMOR</string>
    <string name="username_prompt">Username</string>
    <string name="email_prompt">Email</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="account_creation_textview">Don\'t have an account? Create one now.</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="emailFieldError">Please enter a valid email</string>
    <string name="passwordFieldError">"Please enter a valid password"</string>
    <string name="userNameFieldError">Please enter a valid username</string>
    <string name="change_password">Change password</string>
    <string name="loading_text">LOADING...</string>
    <string name="user_profile">User Profile</string>
    <string name="log_out">Log out</string>
</resources>