<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/gradientVerticalLayout"
        android:background="@drawable/login_gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-179dp"
        tools:layout_editor_absoluteY="63dp"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:srcCompat="@mipmap/asset_armor_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_black"
            android:text="@string/asset_armor"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/error"
            android:shadowColor="@color/black"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="0.5"
            android:textStyle="italic"
            />

        <EditText
            android:id="@+id/usernameEntry"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_input_box"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:inputType="textEmailAddress"
            android:hint="@string/username_prompt"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:autofillHints="username" />

        <EditText
            android:id="@+id/emailEntry"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_input_box"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:inputType="textEmailAddress"
            android:hint="@string/email_prompt"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:autofillHints="emailAddress"
            android:layout_marginTop="2dp"/>

        <EditText
            android:id="@+id/passwordEntry"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_input_box"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            android:autofillHints="password"
            android:layout_marginTop="2dp"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/positive_selection"
            android:text="@string/sign_up"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/accountLoginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:text="@string/already_have_account"
            android:textColor="@color/black"
            android:textStyle="italic" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>